@@ -584,6 +584,8 @@ exist or if is a file or a symbolic link."
 
 (defun sbcl-homedir-pathname ()
   (let ((env (posix-getenv "SBCL_HOME")))
+    ;; Should we absoluteize this if it was obtained automatically?
+    ;; Depends whether people are in the habit of using chdir within Lisp.
     (parse-native-namestring (if (and env (not (string= env "")))
                                  env
                                  *sbcl-home*)
